# SimpleDB

./: .ccls  .gitignore  CMakeLists.txt
docs/: roadmap.md
include/: field.hpp  int_field.hpp  string_field.hpp
include/field/: string_type.hpp  type.hpp
src/: CMakeLists.txt  HelloWorld.cc  IntField.cc  int_field.cpp  int_type.cpp  string_field.cpp  tuple.hpp  tuple_desc.hpp
src/field/: field.hpp  int_field.cpp  int_field.hpp  int_type.cpp  int_type.hpp  string_field.cpp  string_field.hpp  string_type.cpp  string_type.hpp  type.hpp
tests/: CMakeLists.txt  field_test.cpp
